# intract-voyagerx

./: .gitignore  Cargo.toml  README.md
Lpaydat/src/: game.rs  state.rs
Lpaydat/web-frontend/: package-lock.json
Lpaydat/web-frontend/src/: App.svelte
Lpaydat/web-frontend/src/components/: Game.svelte
scripts/: precompute_moves.rs
src/: contract.rs  direction.rs  lib.rs  moves.rs  random.rs  service.rs
web-frontend/: index.html  package.json
web-frontend/src/: app.css
web-frontend/src/components/: Board.svelte  BoardTile.svelte  Header.svelte  Introduction.svelte  MoveLogs.svelte
web-frontend/src/lib/: client.ts
winrhcp/linera-token-frontend/: package.json
winrhcp/linera-token-frontend/src/: App.js
winrhcp/linera-token-frontend/src/components/: CreateToken.js
winrhcp/linera-token-frontend/src/services/: lineraService.js
winrhcp/linera_token_creation/: Cargo.toml  README.md
winrhcp/linera_token_creation/src/: contract.rs  errors.rs  main.rs  types.rs  views.rs
