[package]
name = "game2048"
version = "0.1.0"
authors = ["LPAYDAT <lpaydat@gmail.com>"]
edition = "2021"

[dependencies]
async-graphql = { version = "=7.0.2", default-features = false }
linera-sdk = "0.12.1"
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4"

[dev-dependencies]
linera-sdk = { version = "0.12.1", features = ["test"] }

[[bin]]
name = "game2048_contract"
path = "src/contract.rs"

[[bin]]
name = "game2048_service"
path = "src/service.rs"

[[bin]]
name = "precompute_moves"
path = "scripts/precompute_moves.rs"

[profile.release]
debug = true
lto = true
opt-level = 'z'
strip = 'debuginfo'
